<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|right"
        android:contentDescription="@string/todo"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:icon="@drawable/ic_baseline_share_24"
        app:iconTint="@color/colorPrimary"
        app:backgroundTint="@color/colorAccent"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="400dp"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:background="@null">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            android:fitsSystemWindows="true"
            android:background="@android:color/white"
            app:contentScrim="@android:color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/poster_aquaman"
                app:layout_collapseMode="parallax"
                android:fitsSystemWindows="true"
                android:contentDescription="@string/todo" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:layout_scrollFlags="scroll|enterAlways"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activity.DetailActivity">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="JUDUL" />

            <TextView
                android:id="@+id/tvRelease"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="normal"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                app:layout_constraintEnd_toStartOf="@id/divider"
                tools:text="Release" />

            <View
                android:id="@+id/divider"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_divider"
                app:layout_constraintBottom_toBottomOf="@+id/tvRelease"
                app:layout_constraintEnd_toStartOf="@id/tvGenre"
                app:layout_constraintStart_toEndOf="@id/tvRelease"
                app:layout_constraintTop_toTopOf="@+id/tvRelease" />

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="normal"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                app:layout_constraintStart_toEndOf="@id/divider"
                tools:text="Genre" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/overview"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="@+id/tvGenre"
                app:layout_constraintStart_toStartOf="@+id/tvRelease"
                app:layout_constraintTop_toBottomOf="@+id/tvGenre" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:ellipsize="end"
                android:maxLines="3"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="normal|italic"
                app:layout_constraintEnd_toEndOf="@+id/tvOverview"
                app:layout_constraintStart_toStartOf="@+id/tvOverview"
                app:layout_constraintTop_toBottomOf="@id/tvOverview"
                tools:text="Isi content" />

            <include
                android:id="@+id/include_layout"
                layout="@layout/item_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDesc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>