<resources>
    <string name="app_name">Submission2RepositoryLiveData</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="todo">TODO</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
</resources>